--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@
 			border-radius:50%;
 			width:500px;
 			height: 500px;
+			border-top: 10px;
 }
 .red{
     background-color: red;
 }
+div{
+	margin: 20px;
+}	
